[tool.poetry]
name = "aio"
version = "0.1.0"
description = ""
authors = ["9shikixp <c0115334ef@edu.teu.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.10"
mecab-python3 = "^1.0.3"
unidic = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
